--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     display: none;
 }
 .clock_style {
-    margin-top: 200px;
+    margin-top: 160px;
     margin-bottom: 0px;
     font-family: Helvetica;
     font-size: 80px;
@@ -97,4 +97,29 @@
     border-right: none;
     border-left: none;
     border-bottom: 1px solid white;
+}
+.nav_bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: transparent;
+    padding: 8px 12px;
+}
+.nav_bar a {
+    text-decoration: none;
+    color: white;
+    font-family: Helvetica;
+}
+.navbar__menu {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding-left: 0;
+}
+  
+.navbar__menu li {
+    padding: 8px 30px;
+}
+.navbar__menu li:hover {
+    border-bottom: 2px solid white;
 }
