--- a/css/style.css
+++ b/css/style.css
@@ -123,3 +123,13 @@
 .navbar__menu li:hover {
     border-bottom: 2px solid white;
 }
+.circle {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.5);
+  display: block;
+  margin: 0 auto;
+  margin-top: 100px;
+  border: none;
+}
